Fix collapse down buttons on reply above

--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -227,7 +227,7 @@ pre.codeblock-buttons:hover {
           &::before {
             content: "";
             position: absolute;
-            top: -22px;
+            top: -1.5em;
             width: 1px;
             height: calc(100% + 1.25em);
             background: var(--primary-300);
@@ -243,7 +243,7 @@ pre.codeblock-buttons:hover {
         &::before {
           content: "";
           position: absolute;
-          top: -22px;
+          top: -1.5em;
           width: 1px;
           height: calc(100% + 1.5em);
           background: var(--primary-300);
@@ -370,7 +370,7 @@ pre.codeblock-buttons:hover {
         &::before {
           content: "";
           position: absolute;
-          top: 16px;
+          top: 1.5em;
           width: 1px;
           height: calc(100% + 1.5em);
           background: var(--primary-300);
